# ChangeLog for app-shells/zsh-syntax-highlighting
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  03 Jun 2011; Martin Väth <martin@mvath.de>
  Write ebuild from scratch.