@@ -1,3 +1,3 @@
-EBUILD zsh-syntax-highlighting-99999999.ebuild 966 RMD160 be699edaaa0f8ed70e0d428b58e5e08efdf681fc SHA1 7ee635d07e22222398789f061ad8676d797184a2 SHA256 2c4ea8cb8365fc8b1e9a1c4919e57ebd28e1adf9e9f32e77c04e00fdbbc48dd3
-MISC ChangeLog 227 RMD160 701ead15e28cbfa9f99677180d889e98491806eb SHA1 57f01781228bf693fb835b4f93337072bceca743 SHA256 5d630b939c8ecdb885b6021ba74f0ba39c6b00ed536dc012d1ea1da3a9143de4
+EBUILD zsh-syntax-highlighting-99999999.ebuild 909 RMD160 967eb7195250dd3d3ec7699889d3eb8b2d6df409 SHA1 44e133d114dd5fc113b8b3be5899b0fdf5cd509d SHA256 c0c694bcf772bbad36f0df49e99a0878f5627e633e60b1b3b2208e2eb8a026ed
+MISC ChangeLog 406 RMD160 9ed847f124ee0bf3eacaa8bcd9b721115e29da1b SHA1 51da62f8460e904036ed40e53ebcfc536a8fb189 SHA256 d4594cd71785492720ad18deaf6b3cf6d0af923c2ba0f4ef4b653a3b575867f8
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
