@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  09 Sep 2011; Martin Väth <martin@mvath.de>
+  Port to git-2. Remove support for ESCM_OFLINE/EGIT_OFFLINE:
+  This is named EVCS_OFFLINE in git-2.
+
   26 Aug 2011; Martin Väth <martin@mvath.de>
   Rename aufs2-util-99999999->aufs-util-99999999.2
   Add aufs-util-99999999.3 for linux3.0/aufs3
