@@ -2,5 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  09 Sep 2011; Martin Väth <martin@mvath.de>
+  Update addresses and port to git-2 eclass.
+  Note that ESCM_OFLINE/EGIT_OFFLINE is named EVCS_OFFLINE in git-2.
+
   03 Jun 2011; Martin Väth <martin@mvath.de>
   Write ebuild from scratch.
